<resources>
    <string name="app_name">LotteryLover</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_align_top">Scroll list to top</string>
    <string name="action_align_bottom">Scroll list to bottom</string>
    <string name="action_show_monthly_sub_total_only">Show sub total</string>

    <!-- settings -->
    <string name="settings_appearance_category_title">Appearance</string>
    <string name="settings_appearance_digit_scale_size_title">Digit scale</string>

    <string name="settings_display_category_title">Display</string>
    <string name="settings_display_order">Order</string>
    <string name="settings_display_row_count">Display rows</string>
    <string name="settings_display_combine_special_number_title">Combine special number</string>
    <string name="settings_display_combine_special_number_summary">"Combine special number in Overall and Plus &amp; Minus mode"</string>
    <string name="settings_display_orientation_title">Screen orientation</string>
    <string-array name="settings_display_orientation_list">
        <item>By device</item>
        <item>Landscape</item>
        <item>Portrait</item>
    </string-array>

    <string name="settings_others_category_title">Other settings</string>
    <string name="settings_others_lto_type_selector_title">Lottery list settings</string>

    <string name="settings_about_category_title">About</string>
    <string name="settings_about_app_version">App version</string>
    <string name="settings_about_contact_me">Contact me</string>

    <string-array name="settings_display_rows">
        <item>50 rows</item>
        <item>100 rows</item>
        <item>150 rows</item>
        <item>200 rows</item>
        <item>500 rows</item>
        <item>All rows</item>
    </string-array>

    <string-array name="settings_display_order">
        <item>Ascendant</item>
        <item>Descendant</item>
    </string-array>

    <string name="settings_display_show_sequence">Show column "Sequence"</string>

    <string-array name="settings_appearance_digit_size_list">
        <item>Tiny</item>
        <item>Small</item>
        <item>Normal</item>
        <item>Large</item>
        <item>Huge</item>
        <item>Auto</item>
    </string-array>

    <string name="settings_other_update_period">Update period</string>
    <string-array name="settings_other_update_period">
        <item>Default</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
        <item>Never</item>
    </string-array>

    <string name="settings_other_update_record">Update record</string>

    <string name="settings_other_keep_screen_on">Keep screen on</string>

    <string name="settings_other_clear_and_reload_all_lto_data">Clear and reload all lottery data</string>
    <!-- action bar -->
    <string-array name="action_bar_spinner_lto_type">
        <item>Lto</item>
        <item>Lto 2c</item>
        <item>Lto 7c</item>
        <item>Lto big</item>
        <item>Lto dof</item>
        <item>Lto hk</item>
        <item>Lto 539</item>
        <item>US Power ball</item>
        <item>US Mega Millions</item>
        <item>Japan Loto6</item>
        <item>Singapore ToTo</item>
        <item>AU Power ball</item>
        <item>Euro millions</item>
        <item>List 3</item>
        <item>List 4</item>
    </string-array>

    <string-array name="action_bar_list_type">
        <item>Overall</item>
        <item>Numeric</item>
        <item>Plus digits</item>
        <item>Last digit</item>
        <item>Plus and minus</item>
        <!--<item>Combine List</item>-->
    </string-array>

    <!-- view all activity -->
    <string name="loading">Loading data</string>

    <string name="odd">O</string>
    <string name="plural">P</string>

    <string name="view_all_activity_drawer_list">List</string>
    <string name="view_all_activity_drawer_calendar">Calendar</string>
    <string name="view_all_activity_drawer_analyze">Analytic</string>
    <string name="view_all_activity_drawer_category_other_title">About</string>
    <string name="view_all_activity_drawer_rating_us">Rating us</string>

    <string name="view_all_activity_toast_cannot_find_store">Can not open store page</string>

    <!-- FCM service -->
    <string name="update_task_dialog_title">Version %s is available</string>

    <!-- Calendar activity-->
    <string name="calender_activity_title">Lottery calendar</string>

    <!-- Calendar settings -->
    <string name="calender_settings_activity_name">Calender settings</string>

    <string name="calender_settings_category_title">Calender content</string>
    <string name="calendar_settings_show_drawing_list">Show drawing time tip in calender</string>
    <string name="show_drawing_tip_activity_title">Tip list</string>
    <string name="show_drawing_tip_summary">The blue dot will show under the drawing date</string>

    <!-- analyze activity -->
    <string name="analyze_activity_title">Lottery analyze</string>

    <string name="analyze_fragment_result_all_time">All times</string>
    <string name="analyze_fragment_result_recent_10">Last 10 results</string>
    <string name="analyze_fragment_result_recent_20">Last 20 results</string>
    <string name="analyze_fragment_result_this_month">This month</string>
    <string name="analyze_fragment_result_last_month">Last month</string>
    <string name="analyze_fragment_result_last_2_month">Last 2 months</string>

    <string name="analyze_fragment_result_item_top_5">Top 5</string>
    <string name="analyze_fragment_result_item_last_5">Last 5</string>
    <string name="analyze_fragment_result_item_top_5_special">Top 5 special</string>
    <string name="analyze_fragment_result_item_last_5_special">Last 5 special</string>

    <string name="analyze_fragment_result_item_longest_not_show">Longest time not show</string>
    <string name="analyze_fragment_result_item_longest_not_show_special">Longest time not show special</string>
    <string name="analyze_fragment_result_item_dialog_title">More information</string>

    <string name="analyze_list34_result_drawing_time">Time</string>
    <string name="analyze_list34_result_drawing_number">Number</string>
    <string name="analyze_list34_result_odd_and_plural">Odd/Plural</string>
    <string name="analyze_list34_result_mod_3">Mod 3</string>
    <string name="analyze_list34_result_sum">Sum</string>
    <string name="analyze_list34_result_average">Average</string>
    <string name="analyze_list34_result_number_of_odd_and_plural">Odd/Plural count</string>
</resources>
