<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_appearance_category_title">
        <Preference
            android:key="settings_appearance_digit_scale_size"
            android:title="@string/settings_appearance_digit_scale_size_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_display_category_title">
        <Preference
            android:key="settings_display_order"
            android:title="@string/settings_display_order" />

        <Preference
            android:key="settings_display_row_count"
            android:title="@string/settings_display_row_count" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="settings_display_combine_special_number"
            android:summary="@string/settings_display_combine_special_number_summary"
            android:title="@string/settings_display_combine_special_number_title" />

        <Preference
            android:key="settings_display_orientation"
            android:title="@string/settings_display_orientation_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_others_category_title">
        <Preference
            android:key="settings_others_lto_type_selector_title"
            android:title="@string/settings_others_lto_type_selector_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="settings_about"
        android:title="@string/settings_about_category_title">
        <Preference
            android:key="settings_about_app_version"
            android:title="@string/settings_about_app_version" />

        <Preference
            android:key="settings_about_contact_me"
            android:summary="s011208@gmail.com"
            android:title="@string/settings_about_contact_me" />
    </PreferenceCategory>
</PreferenceScreen>