<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_format_list_numbers_grey600_48dp"
            android:title="@string/view_all_activity_drawer_list" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar_grey600_48dp"
            android:title="@string/view_all_activity_drawer_calendar" />
        <item
            android:id="@+id/nav_analyze"
            android:icon="@drawable/ic_adjust_grey600_48dp"
            android:title="@string/view_all_activity_drawer_analyze" />
    </group>
    <item android:title="@string/view_all_activity_drawer_category_other_title">
        <menu>
            <item
                android:id="@+id/nav_rating_us"
                android:icon="@drawable/ic_thumb_up_outline_grey600_48dp"
                android:title="@string/view_all_activity_drawer_rating_us"></item>
        </menu>
    </item>
</menu>
